# ROS2_sample_code

./: README.md
topic_example/: CMakeLists.txt  package.xml
topic_example/src/: publisher.cpp  subscriber.cpp
